# Node-Weaver

./: .generate_project_structure_txt.py  .gitignore  404.html  OPmenu.xml  PARMmenu.xml  README.md  index.html  objects.inv  project_struct.txt
contributing/: index.html
docs/: README.md  contributing.md  git-guide.md  installation.md  troubleshooting.md
scripts/python/nodeweaver/: README.md  mkdocs.yml  pyproject.toml  setup_docs.py  update_init.py
scripts/python/nodeweaver/config/gradients/: gradient_presets.json
scripts/python/nodeweaver/config/node_shape/: example_networks.json
scripts/python/nodeweaver/config/script_generator/: default.json
scripts/python/nodeweaver/config/styles/: stringweaver.json
scripts/python/nodeweaver/core/: exceptions.py  expr_to_nodes.py  script_generator.py  script_inspector.py
scripts/python/nodeweaver/docs/: contributing.md  gen_ref_nav.py  git-guide.md  index.md  installation.md  troubleshooting.md
scripts/python/nodeweaver/docs/features/: color-palette.md  index.md  node-shape.md  tool-maker-tools.md
scripts/python/nodeweaver/docs/stylesheets/: extra.css
scripts/python/nodeweaver/nodes/: color_palette_configurator.py  custom_node_shape_creator.py  inspect_node_shape_file.py
scripts/python/nodeweaver/stringweaver/ui/: stringweaver.ui
scripts/python/nodeweaver/tests/: conftest.py  test_expressions.py  test_script_generator.py
scripts/python/nodeweaver/utils/: action_buttons.py  colors.py  decorators.py  files.py  hda.py  houdini.py  mparms.py  nodes.py  parameters.py  qt.py  reload.py  strings.py  ui.py
(+55 files in other folders)
