[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodeweaver"
version = "1.0.0"
description = "A Houdini tool development framework"
requires-python = ">=3.7"
readme = "../../../README.md"
authors = [
    {name = "Edward Jaworenko", email = "edward@jaworenko.design"}
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]